add swagger + frontend

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,9 +1,9 @@
 # configuramos variable=valor
 server.port=8081
 #configurar los parametros de la base de datos
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.jpa.open-in-view=false
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #variables
-ENDPOINT_REQ_RES=${ENDPOINT_REQ_RES}
+ENDPOINT_REQ_RES=https://reqres.in/api/unknown
 
 #springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=true
