add ultima clase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,14 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.open-in-view=false
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#validate no usar porque elimina
 
 #variables
 ENDPOINT_REQ_RES=${ENDPOINT_REQ_RES}
-
+REQ_RES_IMPL=resttemplate
 #springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=true
 #springdoc.packages-to-scan=com.bezkoder.spring.swagger.controller
